[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Graphics/GeneralUI/menu_background.png" type="Texture" id=1]
[ext_resource path="res://VNTheme.tres" type="Theme" id=2]
[ext_resource path="res://Resources/AlphaScissor.tres" type="Material" id=3]
[ext_resource path="res://GeneralUIScripts/MenuScreen.gd" type="Script" id=4]

[node name="MenuScreen" type="TextureRect"]
margin_right = 1200.0
margin_bottom = 675.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 1200.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer2"]
margin_top = 1.0
margin_right = 1200.0
margin_bottom = 98.0
theme = ExtResource( 2 )
text = "Menu"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.0
margin_top = -229.5
margin_right = 743.0
margin_bottom = 933.5
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 972.0
margin_bottom = 1143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = ExtResource( 3 )
margin_right = 952.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Continue"
expand_icon = true

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = ExtResource( 3 )
margin_top = 161.0
margin_right = 952.0
margin_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Save Game"
__meta__ = {
"_editor_description_": ""
}

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = ExtResource( 3 )
margin_top = 322.0
margin_right = 952.0
margin_bottom = 479.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Load Game"
__meta__ = {
"_editor_description_": ""
}

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = ExtResource( 3 )
margin_top = 483.0
margin_right = 952.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Delete Save"
__meta__ = {
"_editor_description_": ""
}

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = ExtResource( 3 )
margin_top = 644.0
margin_right = 952.0
margin_bottom = 801.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = ExtResource( 3 )
margin_top = 805.0
margin_right = 952.0
margin_bottom = 962.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Quit to Title Screen"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = ExtResource( 3 )
margin_top = 966.0
margin_right = 952.0
margin_bottom = 1123.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
disabled = true
text = "Quit to Desktop"
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
