[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Graphics/ChoiceButton.png" type="Texture" id=1]
[ext_resource path="res://VNTheme.tres" type="Theme" id=2]
[ext_resource path="res://MenuScreen.gd" type="Script" id=4]

[node name="MenuScreen" type="TextureRect"]
margin_right = 1200.0
margin_bottom = 675.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 1200.0
margin_bottom = 156.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer2"]
margin_top = 29.0
margin_right = 1200.0
margin_bottom = 126.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Menu"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -181.5
margin_right = 300.0
margin_bottom = 299.5
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 461.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 560.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Continue"
expand_icon = true

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 560.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 560.0
margin_bottom = 329.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 333.0
margin_right = 560.0
margin_bottom = 441.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_editor_description_": ""
}
[connection signal="QuitButton_pressed" from="." to="." method="_on_MenuScreen_QuitButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
